--- a/po/zh-cn/usb-printer.po
+++ b/po/zh-cn/usb-printer.po
@@ -57,8 +57,8 @@ msgstr "USB 打印服务器"
 msgid "Specifies the interface to listen on."
 msgstr "指定要监听的接口。"
 
-msgid "NAS"
-msgstr "网络存储"
+msgid "Services"
+msgstr "服务"
 
 msgid "Architecture"
 msgstr "架构"
